orient Z-index fix

--- a/public/css/dictio.css
+++ b/public/css/dictio.css
@@ -46,6 +46,7 @@ video.video-link {
   margin-left: 5px; 
   margin-top: 5px; 
   font-weight: bold;
+  z-index: 100;
 }
 
 .search-options {
